
ChangeLog
   [ + added, - removed, * changed ]

   * (03/Sep/2009) Fixed matching communications in mpi2prv that made mpi_sendrecv fail.
   * (17/Aug/2009) Fixed MPItrace_nevents to put all events to the same timestamp
                   Changed number of events in buffer in CELL (from 64 to 256).
                   Reduced clock-skew between CPU/SPU in CELL machine.
   * (28/May/2009) Fixed configure checking of mpi fortran decoration type.
   * (28/May/2009) Reverted status of libmpitrace.*. Now contains C & Fortran symbols because some MPI
                    implementations rely their MPI fortran symbols to C symbols (MN/MPICH) and others do
                    not (AIX/POE).
   * (28/May/2009) Changes in calltrace (and similar information). Uniformization of routines and lines:
                    MPI callers, OpenMP outlined routines, pthread called routines, user functions, sampled points
   * (26/May/2009) Fixed Dimemas translation problems related with communicators.
   * (25/May/2009) Fixed a problem with a call to fstat that delays the next event after a flush.
   * (25/May/2009) Fixed problems with the timestamp where the HWC_CHANGE events appeared
   * (25/May/2009) Fixed problems with make-dir in XML parsing. Also added full path to *.mpits file.
   * (25/May/2009) Parallel merge improvements
   * (20/May/2009) IBM MPI implementation does not support calling MPI_Get_count with MPI_STATUS_IGNORE, fix.
   * (23/Feb/2009) Improved support for SMPss+CELLss.
   + (18/Feb/2009) Bluegene/P examples imported. Support for PAPI 3.9.0 (BG/P).
   * (09/Feb/2009) Bluegene/P support.
   * (05/Jan/2009) Basic OpenMP instrumentation.
   * (12/Dec/2008) Basic API instrumentation performed by the DynInst launcher.
   * (11/Dec/2008) Splitted MPI instrumentation libraries (C/Fortran) and unifinied in a single one.
   * (24/Oct/2008) Improved time reading for Linux/PPC 64bits
   + (24/Oct/2008) MPItrace dyninst-based instrumentation is working